Chinh sua lai coloritem va sizeitem

--- a/app/src/main/res/layout/color_item.xml
+++ b/app/src/main/res/layout/color_item.xml
@@ -6,10 +6,9 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageShadow"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:src="@color/blue"
-        android:visibility="invisible"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +18,7 @@
         android:id="@+id/imageColor"
         android:layout_width="28dp"
         android:layout_height="28dp"
-        android:src="@color/black"
+        android:src="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/imageShadow"
         app:layout_constraintEnd_toEndOf="@id/imageShadow"
         app:layout_constraintStart_toStartOf="@id/imageShadow"
@@ -30,6 +29,17 @@
         android:layout_width="18sp"
         android:layout_height="18sp"
         android:src="@drawable/ic_picked"
+        app:layout_constraintBottom_toBottomOf="@id/imageColor"
+        app:layout_constraintEnd_toEndOf="@id/imageColor"
+        app:layout_constraintStart_toStartOf="@id/imageColor"
+        app:layout_constraintTop_toTopOf="@id/imageColor"
+        android:visibility="invisible"
+        />
+    <ImageView
+        android:id="@+id/imagePicked_black"
+        android:layout_width="18sp"
+        android:layout_height="18sp"
+        android:src="@drawable/ic_picked_black"
         app:layout_constraintBottom_toBottomOf="@id/imageColor"
         app:layout_constraintEnd_toEndOf="@id/imageColor"
         app:layout_constraintStart_toStartOf="@id/imageColor"
