--- a/app/src/main/res/layout/size_item.xml
+++ b/app/src/main/res/layout/size_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/imageShadow"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:src="@color/blue"
+        android:src="@color/main_purple"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
