--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,66 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
+<animated-vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt">
+    <aapt:attr name="android:drawable">
+        <vector
+            android:name="vector"
+            android:width="288dp"
+            android:height="288dp"
+            android:viewportWidth="288"
+            android:viewportHeight="288">
+            <group
+                android:name="group"
+                android:pivotX="144"
+                android:pivotY="144"
+                android:scaleX="0.85"
+                android:scaleY="0.85">
+                <path
+                    android:name="path"
+                    android:pathData="M 143.813 49.563 L 145.805 49.573 C 156.161 49.65 165.275 50.352 175 54 L 176.987 54.731 C 186.988 58.494 195.54 63.48 204 70 L 206.266 71.742 C 219.269 82.442 228.238 97.375 234 113 L 235.262 116.395 C 242.535 139.951 239.393 166.783 228.159 188.488 C 224.945 194.373 221.192 199.767 217 205 L 215.551 206.91 C 206.615 218.15 193.705 226.228 180.625 231.75 L 178.628 232.604 C 167.375 237.145 156.261 238.536 144.188 238.438 L 142.195 238.427 C 131.839 238.35 122.725 237.648 113 234 L 111.013 233.269 C 101.014 229.507 92.444 224.539 84 218 L 81.547 216.105 C 69.322 205.954 60.316 191.587 54.688 176.875 L 53.952 174.958 C 50.289 164.86 49.61 155.072 49.625 144.375 L 49.628 142.36 C 49.673 131.995 50.338 122.76 54 113 L 54.731 111.013 C 58.493 101.014 63.461 92.444 70 84 L 71.895 81.547 C 89.501 60.345 116.727 49.342 143.813 49.563 Z"
+                    android:fillColor="#325a8f"
+                    android:strokeWidth="1"/>
+                <path
+                    android:name="path_1"
+                    android:pathData="M 117.625 111.5 L 119.833 111.48 C 125.428 111.613 129.668 112.805 133.863 116.754 L 135.313 118.563 L 136.801 120.379 C 139.908 124.58 139.593 128.964 139 134 C 136.455 142.53 130.739 147.559 124 153 L 120.941 155.492 C 119.02 157.056 117.091 158.61 115.152 160.152 C 112.929 161.82 112.929 161.82 112 164 L 114.14 164.044 C 117.344 164.119 120.547 164.215 123.75 164.313 L 127.117 164.381 L 130.359 164.488 L 133.343 164.568 C 136.384 165.062 137.801 165.867 140 168 C 140.481 170.751 140.472 172.24 138.988 174.629 C 135.839 176.801 132.449 176.447 128.754 176.434 L 126.307 176.449 C 124.6 176.456 122.892 176.455 121.185 176.446 C 118.575 176.438 115.967 176.466 113.357 176.498 C 111.698 176.5 110.038 176.499 108.379 176.496 L 106.017 176.53 C 102.462 176.484 100.401 176.298 97.508 174.149 C 95.419 171.172 95.428 169.574 96 166 C 98.718 161.42 101.919 157.764 105.688 154.063 L 107.281 152.476 C 110.347 149.47 113.483 146.749 116.938 144.188 C 121.345 140.87 125.259 137.521 126.438 131.922 C 126.647 128.38 126.295 126.383 124.125 123.563 C 120.583 120.958 118.411 120.568 114 121 C 109.592 123.519 107.884 126.709 105.895 131.195 C 105 133 105 133 103 135 C 99.938 134.75 99.938 134.75 97 134 C 95.415 130.829 95.659 128.52 96 125 C 98.081 119.865 101.448 115.589 106.289 112.844 C 110.079 111.664 113.673 111.534 117.625 111.5 Z"
+                    android:fillColor="#f8f9fb"
+                    android:strokeWidth="1"/>
+                <path
+                    android:name="path_2"
+                    android:pathData="M 179.613 112.691 C 184.173 114.744 186.939 117.363 189 122 C 189.649 126.646 189.65 130.576 187.688 134.875 L 186 137 C 184.998 138.332 183.997 139.665 183 141 L 184.715 142.461 L 186.938 144.375 L 189.152 146.273 C 191.441 148.412 191.938 149.423 192.273 152.539 C 192.512 159.775 191.858 164.49 187 170 C 180.995 175.705 175.02 176.477 167.032 176.509 C 161.627 176.358 158.379 175.334 154.48 171.633 L 153 170 L 150.563 167.688 C 148.421 164.005 147.749 160.26 148 156 C 150 154 150 154 152.938 153.625 C 156 154 156 154 157.688 155.625 C 158.67 157.403 159.574 159.224 160.438 161.063 C 162.069 164.13 162.914 165.457 166 167 C 170.246 167.54 172.258 167.484 175.875 165.125 C 178.892 162.108 179.214 160.296 179.375 156.125 C 179.305 152.654 179.244 151.357 177.25 148.438 C 173.038 146.575 169.217 146.42 164.645 146.273 C 162 146 162 146 160 144 C 159.688 141.5 159.688 141.5 160 139 C 163.099 136.934 163.863 136.801 167.375 136.688 C 170.964 136.348 171.986 136.01 175.063 133.813 C 177.192 131.132 177.192 131.132 177.563 127.938 C 177.178 124.962 177.178 124.962 175.5 122.625 C 171.997 120.348 169.068 120.176 165 121 C 162.116 123.083 160.891 125.183 159.063 128.25 C 157 131 157 131 154.375 131.5 C 152 131 152 131 150 129 C 149.465 125.587 149.33 123.129 151.133 120.09 C 158.372 111.164 168.715 109.808 179.613 112.691 Z"
+                    android:fillColor="#f9fafc"
+                    android:strokeWidth="1"/>
+
+            </group>
+        </vector>
+    </aapt:attr>
+    <target android:name="group">
+        <aapt:attr name="android:animation">
+            <set>
+                <objectAnimator
+                    android:propertyName="scaleX"
+                    android:startOffset="200"
+                    android:duration="500"
+                    android:valueFrom="0"
+                    android:valueTo="0.85"
+                    android:valueType="floatType"
+                    android:interpolator="@android:anim/overshoot_interpolator"/>
+                <objectAnimator
+                    android:propertyName="scaleY"
+                    android:startOffset="200"
+                    android:duration="500"
+                    android:valueFrom="0"
+                    android:valueTo="0.85"
+                    android:valueType="floatType"
+                    android:interpolator="@android:anim/overshoot_interpolator"/>
+                <objectAnimator
+                    android:propertyName="rotation"
+                    android:startOffset="250"
+                    android:duration="350"
+                    android:valueFrom="0"
+                    android:valueTo="360"
+                    android:valueType="floatType"
+                    android:interpolator="@android:interpolator/fast_out_slow_in"/>
+            </set>
         </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
-</vector>
+    </target>
+</animated-vector>
