--- a/app/src/main/res/layout/activity_two_attribute_detail.xml
+++ b/app/src/main/res/layout/activity_two_attribute_detail.xml
@@ -18,6 +18,7 @@
             android:id="@+id/product_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -451,6 +452,7 @@
 
 
             <LinearLayout
+                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
