--- a/app/src/main/res/layout/fragment_mycart.xml
+++ b/app/src/main/res/layout/fragment_mycart.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/btBack"
                 android:layout_width="42dp"
                 android:layout_height="42dp"
-                android:src="@drawable/back"
+                android:src="@drawable/baseline_arrow_back_"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="MissingConstraints" />
             <TextView
@@ -59,11 +59,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
-
                         />
             <androidx.cardview.widget.CardView
                 android:id="@+id/layout_checkout"
-                android:visibility="gone"
+                android:visibility="invisible"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_gravity="right"
@@ -72,18 +71,35 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingHorizontal="8dp"
                     >
-
+                <LinearLayout
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:textDirection="rtl"
+                    android:paddingHorizontal="4dp">                    >
                     <TextView
                         android:id="@+id/total"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Total: 99"
                         android:layout_marginRight="8dp"
+
                         android:textColor="@color/main_purple"
                         android:textStyle="bold"
                         android:textSize="16dp"
-                        android:layout_marginLeft="8dp"/>
+                        />
+                    <TextView
+                        android:id="@+id/shipping"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/main_purple"
+                        android:textSize="12dp"
+                        android:text="Shipping: 10"
+                        />
+                </LinearLayout>
 
                     <ImageView
                         android:id="@+id/detailCheckout"
@@ -95,6 +111,7 @@
                         android:layout_marginRight="8dp"/>
 
                     <Button
+                        android:background="@drawable/button_purple_white"
                         android:id="@+id/btCheckOut1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
