--- a/app/src/main/res/layout/order_item.xml
+++ b/app/src/main/res/layout/order_item.xml
@@ -61,7 +61,7 @@
                             android:textAlignment="center"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="ON PROGRESS"
+                            android:text="WAITING"
                             android:textSize="16dp"
                             android:textColor="@color/waiting"
                             android:textStyle="bold"
